feat(music): 添加music的交互

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -45,3 +45,8 @@ page {
     flex: 1;
   }
   /*postcss-pxtransform rn eject disable*/
+
+  .flex-empty {
+    flex: 1;
+    visibility: hidden;
+  }
