feat(defailt): 修复图片过大导致的样式错位

--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -18,5 +18,8 @@
     &__content {
         align-self: flex-start;
         font-size: 32px;
+        &--img {
+            border: 1px solid red;
+        }
     }
 }
